--- a/src/site/markdown/index.md.vm
+++ b/src/site/markdown/index.md.vm
@@ -38,11 +38,11 @@ Software-Pakete
 
 _Installationspaket mit DWH-J2EE-${dwhJ2EEVersion}_
 
-[${releaseRepoUrl}/org/aktin/dwh-install/${project.version}/dwh-install-${project.version}.tar.gz](${releaseRepoUrl}/org/aktin/dwh-install/${project.version}/dwh-install-${project.version}.tar.gz)
+[${releaseRepoUrl}/org/aktin/dwh/dwh-install/${project.version}/dwh-install-${project.version}.tar.gz](${releaseRepoUrl}/org/aktin/dwh-install/${project.version}/dwh-install-${project.version}.tar.gz)
 
 _Softwareupdate-Paket auf DWH-J2EE-${dwhJ2EEVersion}_
 
-[${releaseRepoUrl}/org/aktin/dwh-update/${project.version}/dwh-update-${project.version}.tar.gz](${releaseRepoUrl}/org/aktin/dwh-update/${project.version}/dwh-update-${project.version}.tar.gz)
+[${releaseRepoUrl}/org/aktin/dwh/dwh-update/${project.version}/dwh-update-${project.version}.tar.gz](${releaseRepoUrl}/org/aktin/dwh-update/${project.version}/dwh-update-${project.version}.tar.gz)
 Beschreibungen und Hinweise
 ---------------------------
 
