--- a/src/site/markdown/update-auto.md.vm
+++ b/src/site/markdown/update-auto.md.vm
@@ -2,7 +2,7 @@ Skriptbasiertes Update auf DWH-J2EE-${dwhJ2EEVersion} für Debian (und CentOS)
 ==================================================
 
 Für laufende DWH Instanzen auf Debian Servern stellen wir ein Update-Skript bereit, zu finden unter 
-[Debian Update Paket](${releaseRepoUrl}/org/aktin/dwh-update/${project.version}/dwh-update-${project.version}.tar.gz)
+[Debian Update Paket](${releaseRepoUrl}/org/aktin/dwh/dwh-update/${project.version}/dwh-update-${project.version}.tar.gz)
 Für die Ausführung ist wichtig, dass der User als `root` angemeldet ist. 
 Dazu führt man, falls der User auf der Sudoer-Liste steht (der User `root` hat dann meist kein eigenes Passwort), folgendes aus:
 
@@ -18,7 +18,7 @@ su -
 Als erstes muss das Paket heruntergeladen werden und entpackt: 
 
 ```
-wget ${releaseRepoUrl}/org/aktin/dwh-update/${project.version}/dwh-update-${project.version}.tar.gz
+wget ${releaseRepoUrl}/org/aktin/dwh/dwh-update/${project.version}/dwh-update-${project.version}.tar.gz
 tar xvzf dwh-update-${project.version}.tar.gz
 cd dwh-update
 ```
@@ -72,7 +72,7 @@ Am Ende des Skriptes wird der Wildfly Server neugestartet und das neue Softwarep
 Dies muss kein Fehler sein. Das Script wartet nur zwei Minuten und gibt dann die Warnung aus. Bitte überprüfen Sie nach einigen Minuten den Deployment-Ordner `/opt/wildfly-9.0.2.Final/standalone/deployments`, z.B. mit dem Befehl
 
 ```
-ls /opt/wildfly-9.0.2.Final/standalone/deployments/dwh-j2ee-${dwhJ2EEVersion}*.deployed
+ls /opt/wildfly-9.0.2.Final/standalone/deployments/dwh-j2ee-*.deployed
 ```
 
 Sollte eine Datei angezeigt werden, war das Update erfolgreich.
