--- a/src/site/markdown/install-script.md.vm
+++ b/src/site/markdown/install-script.md.vm
@@ -6,11 +6,13 @@ Wenn sie ein anderes System verwenden, müssen Sie die Skripte evtl.
 anpassen oder die enthaltenen Schritte manuell durchführen.
 
 Mit dem Befehl 
+
 ```
 uname -a
 ```
 können Sie die Distribution des Linux-Systems herausfinden. 
 In der Konsole sehen Sie dann ähnlich dem Folgenden: 
+
 ```
 Linux debian-8 3.16.0-4-amd64 #1 SMP Debian 3.16.7-ckt20-1+deb8u1 (2015-12-14) x86_64 GNU/Linux
 ```
@@ -29,15 +31,28 @@ z.B. mit
 (evtl. mit Option `--no-check-certificate` bei Zertifikatfehlern).
 
 Wenn das Paket heruntergeladen ist, kann es entpackt werden mit 
-`tar xvzf dwh-install-${project.version}.tar.gz`. Die Dateien werden dann automatisch in 
+
+```
+tar xvzf dwh-install-${project.version}.tar.gz
+```
+Die Dateien werden dann automatisch in 
 den Ordner `aktin-dwh-installer` entpackt.
 
 Die Installation benötigt Zugriff auf das Internet - speziell die jeweiligen 
 Repositories und die Server der Universität Oldenburg, um die benötigten Pakete herunterzuladen.
 
-Unter Debian 8, starten Sie nun das Skript `./aktin-dwh-installer/install_debian.sh`.
+Unter Debian 8, starten Sie nun das Skript 
+
+```
+./aktin-dwh-installer/install_debian.sh
+```
 Die Installation kann bis zu 20 Minuten dauern. 
-Um die Konsolenausgaben umzuleiten, können Sie alternativ auch `./aktin-dwh-installer/install_debian.sh > install-aktin-dwh.log` ausführen. Die Logausgaben finden Sie dann in der Datei `install-aktin-dwh.log`.
+Um die Konsolenausgaben umzuleiten, können Sie alternativ auch 
+
+```
+./aktin-dwh-installer/install_debian.sh > install-aktin-dwh.log
+```
+ausführen. Die Logausgaben finden Sie dann in der Datei `install-aktin-dwh.log`.
 
 Für CentOS 7, starten Sie das Skript `aktin-dwh-installer/install_centos.sh`. 
 SELinux wird in dem Prozess deaktiviert. Sollten Sie SELinux verwenden wollen 
